.vscode/allianceuat_compare/force-app/main/default/objects/AllianceJobBoardCustomSettings__c/AllianceJobBoardCustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Alliance Job Board Custom Settings</label>
</CustomObject>