.vscode/allianceuat_compare/force-app/main/default/objects/AllianceJobBoardCustomSettings__c/fields/onboardingURL__c.field-meta.xml
<CustomField>
    <fullName>onboardingURL__c</fullName>
    <label>onboardingURL</label>
    <type>Url</type>
</CustomField>