.vscode/allianceuat_compare/force-app/main/default/objects/AllianceJobBoardCustomSettings__c/fields/OrgURL__c.field-meta.xml
<CustomField>
    <fullName>OrgURL__c</fullName>
    <label>OrgURL</label>
    <type>Url</type>
</CustomField>