.vscode/allianceuat_compare/force-app/main/default/objects/AllianceJobBoardCustomSettings__c/fields/SiteURL__c.field-meta.xml
<CustomField>
    <fullName>SiteURL__c</fullName>
    <label>SiteURL</label>
    <type>Url</type>
</CustomField>